# Sandbox

./: .gitignore  CLAUDE.md  README.md  app_config.json  build_once.bat  main.py  package-lock.json  package.json  run.py  start.bat.template
.claude/: settings.local.json
.claude/skills/finisher/: skill.md
Help/: manual.html
Plans/: Completed_Work.md  Decisions.md  FW_ALLOCATION_MIGRATION.md  Project_Status.md
apps/demo_excel/: logic.py  router.py
apps/demo_excel/templates/: index.html
apps/demo_personal/: logic.py  router.py
apps/demo_personal/templates/: index.html
apps/demo_work/: logic.py  router.py
apps/demo_work/templates/: index.html
plans/: ProjectStatus.md
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: config.rs  datalore.rs  discovery.rs  fs_helpers.rs  fw_allocation.rs  mod.rs  thumbnails.rs
src/apps/datalore/: app.json  datalore.js  index.html
src/apps/demo_excel/: app.json  index.html
src/apps/demo_personal/: app.json
src/apps/demo_work/: app.json
src/apps/fw_allocation/: app.json  fw_allocation.js  index.html
src/css/: base.css
src/help/: manual.html
src/js/: app.js  common.js
static/css/: base.css
static/js/: common.js
templates/: home.html
