[package]
name = "sandbox"
version = "1.0.0"
description = "A personal miniapp platform"
authors = ["Steve Amalfitano"]
edition = "2021"

[lib]
name = "sandbox_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
calamine = "0.34"
rust_xlsxwriter = "0.94"
base64 = "0.22"
rusqlite = { version = "0.31", features = ["bundled"] }
csv = "1.3"
